--- a/Implementations/loadJSON.ipynb
+++ b/Implementations/loadJSON.ipynb
@@ -2,33 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import re\n",
     "import os\n",
-    "import glob"
+    "import glob\n",
+    "import readQueries as rq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#read tables\n",
+    "#read files\n",
     "json_dir_name = \"Datasets/\"\n",
-    "json_pattern = os.path.join(json_dir_name,'*.json')\n",
-    "file_list = glob.glob(json_pattern)\n",
-    "                            \n",
-    "#with open('Datasets/re_tables-0370.json') as f:\n",
-    "  \n",
-    "#    dataJSON = json.load(f)\n",
     "\n",
-    "#f.close()\n",
-    "#dataJSON = []\n",
+    "json_pattern = os.path.join(json_dir_name,'*.json')\n",
+    "\n",
+    "file_list = glob.glob(json_pattern)\n",
     "\n",
     "for file in file_list:\n",
     "  \n",
@@ -50,21 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#read queries\n",
-    "with open('Datasets/queries.txt') as f:\n",
-    "  \n",
-    "    queries = f.read().splitlines()\n",
-    "\n",
-    "f.close()"
+    "queries = rq.readQueries()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,6 +170,13 @@
    "source": [
     "vectorizer = TfidfVectorizer(stop_words='english')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
