--- a/loadPickle.ipynb
+++ b/loadPickle.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "import re\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from scipy.spatial import distance\n",
+    "from heapq import nsmallest\n",
+    "from sklearn.metrics import pairwise_distances"
    ]
   },
   {
@@ -37,19 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90000/90000 [12:27<00:00, 120.33it/s]\n"
+      "100%|██████████| 90000/90000 [04:31<00:00, 331.75it/s]\n"
      ]
     }
    ],
    "source": [
-    "corpusArticles = []\n",
+    "formattedArticles = []\n",
     "\n",
     "for i in tqdm(rawArticles.keys()):\n",
     "    \n",
@@ -70,7 +75,7 @@
     "        formattedText = formattedText.lstrip()\n",
     "        formattedText = formattedText.rstrip()\n",
     "    \n",
-    "        corpusArticles.append([keyArticle,formattedText])"
+    "        formattedArticles.append([keyArticle,formattedText])"
    ]
   },
   {
@@ -82,13 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 98%|█████████▊| 291676/298725 [01:34<00:02, 3090.30it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "for article in corpusArticles:\n",
+    "for article in tqdm(formattedArticles):\n",
     "    if (article[1] == ''):\n",
-    "        corpusArticles.remove(article)"
+    "        formattedArticles.remove(article)"
    ]
   },
   {
@@ -100,19 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90000/90000 [02:39<00:00, 563.13it/s] \n"
+      "100%|██████████| 90000/90000 [00:57<00:00, 1576.14it/s]\n"
      ]
     }
    ],
    "source": [
-    "corpusTable = []\n",
+    "formattedTables = []\n",
     "\n",
     "for i in tqdm(rawTables.keys()):\n",
     "    \n",
@@ -134,7 +147,26 @@
     "        fullTextTable = fullTextTable.lstrip()\n",
     "        fullTextTable = fullTextTable.rstrip()\n",
     "        \n",
-    "        corpusTable.append([keyTable,keyCaption,fullTextTable])"
+    "        formattedTables.append([keyTable,keyCaption,fullTextTable])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 97%|█████████▋| 298855/308759 [02:02<00:04, 2430.46it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tables in tqdm(formattedTables):\n",
+    "    if (tables[2] == ''):\n",
+    "        formattedTables.remove(tables)"
    ]
   },
   {
@@ -146,40 +178,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "corpusTables = []\n",
+    "\n",
+    "for tables in formattedTables:\n",
+    "    \n",
+    "    corpusTables.append(tables[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp1 = np.asarray(formattedArticles[0:10])\n",
+    "corpusArticles = temp1[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = TfidfVectorizer(stop_words='english', analyzer='word')\n",
+    "tablesByCharacteristics = vectorizer.fit_transform(corpusTables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "articlesByCharacteristics = vectorizer.transform(corpusArticles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getTotalTablesByArticle(idArticle):\n",
+    "\n",
+    "    countTopTables = 0\n",
+    "\n",
+    "    for tables in formattedTables:\n",
+    "    \n",
+    "        if tables[0] == int(idArticle):\n",
+    "        \n",
+    "             countTopTables = countTopTables + 1\n",
+    "\n",
+    "    return countTopTables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getIdRankedTalbes(topK,distanceVector):\n",
+    "\n",
+    "    idRankedTables = []\n",
+    "\n",
+    "    for topkDistance in topK:\n",
+    "    \n",
+    "        #index = distanceVector.index(topkDistance)\n",
+    "        \n",
+    "        index = np.where(distanceVector == topkDistance)\n",
+    "         \n",
+    "        indexColummun = index[0][0]\n",
+    "        \n",
+    "        idRankedTables.append(formattedTables[indexColummun][0])\n",
+    "\n",
+    "    return idRankedTables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getAccuracy(idRankedTables, idQueryGoal):\n",
+    "\n",
+    "    totalRanquedTables = len(idRankedTables)\n",
+    "\n",
+    "    match = 0\n",
+    "\n",
+    "    for idTable in idRankedTables:\n",
+    "    \n",
+    "        if idTable == idQueryGoal:\n",
+    "    \n",
+    "            match = match + 1\n",
+    "\n",
+    "    accuracy = match / totalRanquedTables\n",
+    "    \n",
+    "    return accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idQueryGoal = int(formattedArticles[0][0])\n",
+    "\n",
+    "distanceVector = pairwise_distances(articlesByCharacteristics, tablesByCharacteristics, metric='cosine')\n",
+    "\n",
+    "#countTopTables = getTotalTablesByArticle(idQueryGoal)\n",
+    "    \n",
+    "#topK = nsmallest(countTopTables, distanceVector[0])\n",
+    "\n",
+    "#idRankedTables = getIdRankedTalbes(topK,distanceVector[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-100-cf39efed852b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcorpusTable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
      ]
     }
    ],
    "source": [
-    "corpusTable[:2,1:,:2]"
+    "print(getAccuracy(idRankedTables,idQueryGoal))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
