tf-idf method initial

--- a/tf-idf-Method.ipynb
+++ b/tf-idf-Method.ipynb
@@ -29,8 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rawArticles = pickle.load(open(\"NewsDataset/final_article_tables.pkl\",\"rb\"))\n",
-    "rawTables = pickle.load(open(\"NewsDataset/final_dict_tables.pkl\",\"rb\"))"
+    "rawArticles = pickle.load(open(\"articlesDataset/final_article_tables.pkl\",\"rb\"))\n",
+    "rawTables = pickle.load(open(\"articlesDataset/final_dict_tables.pkl\",\"rb\"))"
    ]
   },
   {
@@ -49,7 +49,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90000/90000 [02:44<00:00, 548.52it/s]\n"
+      "  4%|▍         | 3581/90000 [00:13<05:39, 254.83it/s]"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-618f0473768a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;31m#removing special characters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0mformattedText\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[^A-Za-z]+'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfullText\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;31m#removing left and right spaces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/re.py\u001b[0m in \u001b[0;36msub\u001b[0;34m(pattern, repl, string, count, flags)\u001b[0m\n\u001b[1;32m    190\u001b[0m     \u001b[0ma\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mit\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0ms\u001b[0m \u001b[0mpassed\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mMatch\u001b[0m \u001b[0mobject\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mmust\u001b[0m \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m     a replacement string to be used.\"\"\"\n\u001b[0;32m--> 192\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrepl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msubn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrepl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -259,13 +271,7 @@
       " 50%|████▉     | 44645/90000 [00:16<00:13, 3285.36it/s]\u001b[A\n",
       " 50%|████▉     | 44980/90000 [00:16<00:14, 3201.79it/s]\u001b[A\n",
       " 50%|█████     | 45306/90000 [00:16<00:14, 3065.27it/s]\u001b[A\n",
-      " 51%|█████     | 45618/90000 [00:17<00:18, 2340.69it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 51%|█████     | 45618/90000 [00:17<00:18, 2340.69it/s]\u001b[A\n",
       " 51%|█████     | 45882/90000 [00:17<00:18, 2422.49it/s]\u001b[A\n",
       " 51%|█████▏    | 46146/90000 [00:17<00:19, 2264.82it/s]\u001b[A\n",
       " 52%|█████▏    | 46461/90000 [00:17<00:17, 2467.42it/s]\u001b[A\n",
@@ -600,13 +606,7 @@
       " 41%|████      | 125332/308759 [00:16<00:38, 4720.94it/s]\u001b[A\n",
       " 41%|████      | 125845/308759 [00:16<00:37, 4831.49it/s]\u001b[A\n",
       " 41%|████      | 126348/308759 [00:16<00:39, 4611.42it/s]\u001b[A\n",
-      " 41%|████      | 126825/308759 [00:16<00:42, 4254.46it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 41%|████      | 126825/308759 [00:16<00:42, 4254.46it/s]\u001b[A\n",
       " 41%|████▏     | 127469/308759 [00:16<00:38, 4700.74it/s]\u001b[A\n",
       " 42%|████▏     | 128154/308759 [00:16<00:35, 5145.09it/s]\u001b[A\n",
       " 42%|████▏     | 128864/308759 [00:16<00:32, 5590.49it/s]\u001b[A\n",
@@ -880,13 +880,7 @@
       " 82%|████████▏ | 253758/308759 [00:51<00:20, 2683.13it/s]\u001b[A\n",
       " 82%|████████▏ | 254082/308759 [00:51<00:23, 2364.42it/s]\u001b[A\n",
       " 82%|████████▏ | 254365/308759 [00:51<00:23, 2273.46it/s]\u001b[A\n",
-      " 82%|████████▏ | 254626/308759 [00:52<00:25, 2091.55it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 82%|████████▏ | 254626/308759 [00:52<00:25, 2091.55it/s]\u001b[A\n",
       " 83%|████████▎ | 254903/308759 [00:52<00:24, 2219.46it/s]\u001b[A\n",
       " 83%|████████▎ | 255183/308759 [00:52<00:23, 2326.34it/s]\u001b[A\n",
       " 83%|████████▎ | 255780/308759 [00:52<00:18, 2815.60it/s]\u001b[A\n",
