Multi Field TF-IDF

--- a/multiField-TF-IDF.ipynb
+++ b/multiField-TF-IDF.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,20 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpusTables = []\n",
+    "corpusTablesCaption = []\n",
+    "corpusTablesHeader = []\n",
+    "corpusTablesText = []\n",
     "\n",
     "for tables in formattedTables:\n",
     "    \n",
-    "    corpusTables.append(str(tables[4]))"
+    "    corpusTablesCaption.append(str(tables[1]))\n",
+    "    corpusTablesHeader.append(str(tables[2]))\n",
+    "    corpusTablesText.append(str(tables[3]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,26 +72,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer = TfidfVectorizer(stop_words='english', analyzer='word')\n",
-    "tablesByCharacteristics = vectorizer.fit_transform(corpusTables)"
+    "vectorizerCaption = TfidfVectorizer(stop_words='english', analyzer='word')\n",
+    "vectorizerHeader = TfidfVectorizer(stop_words='english', analyzer='word')\n",
+    "vectorizerText = TfidfVectorizer(stop_words='english', analyzer='word')\n",
+    "\n",
+    "tablesVectorCaption = vectorizerCaption.fit_transform(corpusTablesCaption)\n",
+    "tablesVectorHeader = vectorizerHeader.fit_transform(corpusTablesHeader)\n",
+    "tablesVectorText = vectorizerText.fit_transform(corpusTablesText)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "articlesByCharacteristics = vectorizer.transform(corpusArticlesText)"
+    "articlesVectorCaption = vectorizerCaption.transform(corpusArticlesText)\n",
+    "articlesVectorHeader = vectorizerHeader.transform(corpusArticlesText)\n",
+    "articlesVectorText = vectorizerText.transform(corpusArticlesText)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,25 +165,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "accuracy = []\n",
     "\n",
-    "totalSelectedArticles = int(articlesByCharacteristics.shape[0])\n",
+    "totalSelectedArticles = int(articlesVectorCaption.shape[0])\n",
     "\n",
     "for i in range(totalSelectedArticles):\n",
     "    \n",
-    "    distanceVector = pairwise_distances(articlesByCharacteristics[i], tablesByCharacteristics, metric='cosine')\n",
+    "    distanceVectorCaption = pairwise_distances(articlesVectorCaption[i], tablesVectorCaption, metric='cosine')\n",
+    "    distanceVectorHeader = pairwise_distances(articlesVectorHeader[i], tablesVectorHeader, metric='cosine')\n",
+    "    distanceVectorText = pairwise_distances(articlesVectorText[i], tablesVectorText, metric='cosine')\n",
+    "    \n",
+    "    distanceSum = np.sum([distanceVectorCaption, distanceVectorHeader, distanceVectorText], axis=0)\n",
+    "    distanceAvg = np.mean([distanceVectorCaption, distanceVectorHeader, distanceVectorText], axis=0)\n",
+    "    distanceMax = np.amax([distanceVectorCaption, distanceVectorHeader, distanceVectorText], axis=0)\n",
     "    \n",
     "    idQueryGoal = int(corpusArticlesID[i])\n",
     "    \n",
     "    countTopTables = getTotalTablesByArticle(idQueryGoal)\n",
     "    \n",
-    "    topK = nsmallest(countTopTables, distanceVector[0])\n",
+    "    topK = nsmallest(countTopTables, distanceSum[0])\n",
     "    \n",
-    "    idRankedTables = getIdRankedTalbes(topK,distanceVector[0])\n",
+    "    idRankedTables = getIdRankedTalbes(topK,distanceSum[0])\n",
     "    \n",
     "    #print(idRankedTables)\n",
     "    \n",
@@ -181,16 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.06666666666666667"
+       "0.03392857142857143"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,25 +218,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[331039,\n",
-       " 707815,\n",
-       " 9962207,\n",
-       " 33957668,\n",
-       " 7973225,\n",
-       " 1108415,\n",
-       " 1749093,\n",
-       " 7408658,\n",
-       " 246185,\n",
-       " 23624157]"
+       "[342780,\n",
+       " 234598,\n",
+       " 3630165,\n",
+       " 18664181,\n",
+       " 5001707,\n",
+       " 33198042,\n",
+       " 33142448,\n",
+       " 24654684,\n",
+       " 236613,\n",
+       " 986935,\n",
+       " 2194459,\n",
+       " 32511265,\n",
+       " 34364582,\n",
+       " 18752637,\n",
+       " 1725270,\n",
+       " 21063711,\n",
+       " 3489830,\n",
+       " 245765,\n",
+       " 1680161,\n",
+       " 876603]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,13 +254,6 @@
    "source": [
     "corpusArticlesID"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
