update the files the read the new dataset

--- a/singleField-TF-IDF.ipynb
+++ b/singleField-TF-IDF.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,45 +181,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.06666666666666667"
+       "[0.16666666666666666,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.75,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean(accuracy)"
+    "accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[331039,\n",
-       " 707815,\n",
-       " 9962207,\n",
-       " 33957668,\n",
-       " 7973225,\n",
-       " 1108415,\n",
-       " 1749093,\n",
-       " 7408658,\n",
-       " 246185,\n",
-       " 23624157]"
+       "[7075270,\n",
+       " 33675978,\n",
+       " 582420,\n",
+       " 6803709,\n",
+       " 13280770,\n",
+       " 3062981,\n",
+       " 358293,\n",
+       " 27532334,\n",
+       " 4581475,\n",
+       " 11094228,\n",
+       " 1186387,\n",
+       " 2725690,\n",
+       " 370528,\n",
+       " 26350204,\n",
+       " 9066267,\n",
+       " 184058,\n",
+       " 34257219,\n",
+       " 5185171,\n",
+       " 11668399,\n",
+       " 1822080]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
