--- a/multiField-TF-IDF.ipynb
+++ b/multiField-TF-IDF.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,55 +198,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03392857142857143"
+       "[0.0,\n",
+       " 0.0,\n",
+       " 1.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.25,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean(accuracy)"
+    "accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[342780,\n",
-       " 234598,\n",
-       " 3630165,\n",
-       " 18664181,\n",
-       " 5001707,\n",
-       " 33198042,\n",
-       " 33142448,\n",
-       " 24654684,\n",
-       " 236613,\n",
-       " 986935,\n",
-       " 2194459,\n",
-       " 32511265,\n",
-       " 34364582,\n",
-       " 18752637,\n",
-       " 1725270,\n",
-       " 21063711,\n",
-       " 3489830,\n",
-       " 245765,\n",
-       " 1680161,\n",
-       " 876603]"
+       "[1298785,\n",
+       " 8747079,\n",
+       " 2163477,\n",
+       " 8222233,\n",
+       " 14076943,\n",
+       " 343691,\n",
+       " 6266060,\n",
+       " 18213,\n",
+       " 401592,\n",
+       " 14416180,\n",
+       " 397266,\n",
+       " 29240054,\n",
+       " 12589784,\n",
+       " 36754499,\n",
+       " 21103330,\n",
+       " 8864870,\n",
+       " 18960141,\n",
+       " 11308618,\n",
+       " 31595506,\n",
+       " 10638591]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
