reading the tables from raw data

--- a/loadRawDataTables.ipynb
+++ b/loadRawDataTables.ipynb
@@ -211,18 +211,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "returnSelect = sqlContext.sql(\"select tableData from tables\").collect()"
+    "returnSelect = sqlContext.sql(\"select tableData from tables where pgId = 4194312\").collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 8261.93it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "tableText = []\n",
     "\n",
@@ -247,11 +255,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Allmusic musicOMH The Rolling Stone Album Guide',\n",
+       " 'Austrian Albums Chart Dutch Albums Chart European Top Albums Japanese Oricon Albums Chart Swedish Albums Chart Swiss Albums Chart UK Albums Chart U S Billboard U S Billboard Top R B Hip Hop Albums',\n",
+       " 'Europe December Geffen Australia December Geffen United Kingdom December Geffen United States December Geffen Canada December Geffen Japan December Geffen Brazil January Geffen']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "len(tableText)"
+    "tableText"
    ]
   },
   {
